--- a/src/css/weather-component.css
+++ b/src/css/weather-component.css
@@ -24,6 +24,11 @@
     border: 1px solid white;
     background: transparent;
     color: white;
+    font-size: 16px;
+}
+
+.weather-container form input::placeholder {
+    color: white;
 }
 
 .weather-container form button {
@@ -39,10 +44,6 @@
     background: grey;
     transition: all 0.3s;
     cursor: pointer;
-}
-
-.weather-container form input::placeholder {
-    color: white;
 }
 
 .weather-container h2 {
@@ -75,7 +76,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 350px;
+    width: 300px;
     padding: 10px 20px 50px 20px;
     border-radius: 20px;
     background-color: lightsteelblue;
